--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,50 +1,52 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    tools:context=".MainActivity">
+    tools:context=".ui.MainActivity">
 
     <TextView
         android:id="@+id/header_1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/counter_1"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:text="@string/counter_1" />
 
     <Button
         android:id="@+id/button_1"
+        android:backgroundTint="@color/red"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="0"/>
+        android:text="@string/click_on_me" />
 
     <TextView
         android:id="@+id/header_2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/counter_2"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:text="@string/counter_2" />
 
     <Button
         android:id="@+id/button_2"
+        android:backgroundTint="@color/blue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="0"/>
+        android:text="@string/click_on_me" />
 
     <TextView
         android:id="@+id/header_3"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/counter_3"
-        android:layout_marginTop="15dp"/>
+        android:layout_marginTop="15dp"
+        android:text="@string/counter_3" />
 
     <Button
         android:id="@+id/button_3"
+        android:backgroundTint="@color/orange"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="0"/>
+        android:text="@string/click_on_me" />
 
 </LinearLayout>
