--- a/app/src/main/res/layout/item_rv_users.xml
+++ b/app/src/main/res/layout/item_rv_users.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
     android:background="@drawable/rv_style"
-    android:elevation="15dp"
+    android:elevation="100dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
     tools:ignore="UseCompoundDrawables">
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fontFamily="casual"
+        android:layout_marginEnd="15dp"
         android:padding="16dp"
         android:textAlignment="center"
         android:textSize="30sp"
