--- a/app/src/main/res/layout/item_rv_repos.xml
+++ b/app/src/main/res/layout/item_rv_repos.xml
@@ -6,7 +6,7 @@
     android:layout_marginStart="15dp"
     android:layout_marginEnd="15dp"
     android:layout_marginTop="15dp"
-    android:background="@drawable/rv_style"
+    android:background="@drawable/rv_repo_style"
     android:elevation="100dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
