--- a/app/src/main/res/layout/item_rv_users.xml
+++ b/app/src/main/res/layout/item_rv_users.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="15dp"
-    android:background="@drawable/rv_style"
+    android:background="@drawable/rv_users_style"
     android:elevation="100dp"
     android:gravity="center_vertical"
     android:orientation="horizontal"
@@ -32,8 +32,10 @@
         android:fontFamily="casual"
         android:layout_marginEnd="15dp"
         android:padding="16dp"
+        android:textColor="@color/teal_200"
         android:textAlignment="center"
         android:textSize="30sp"
+        tools:text="@string/avatar"
         android:textStyle="bold" />
 
 </LinearLayout>
