--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,7 +9,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:minHeight="?actionBarSize"
-        android:background="?colorPrimary"
+        android:elevation="10dp"
+        android:background="#5A5A59"
         android:theme="@style/ThemeOverlay.AppCompat.Dark" />
 
 
